--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 /* Header and Navigation */
 header {
-    background: #070bf7;
+    background: #161565;
     color: white;
     padding: 1rem 0;
     position: relative;
