--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@
         z-index: 1000; /* Z-index */
         left: 0; /* Left position */
         top: 0; /* Top position */
-        width: 100%; /* Full width */
+        align-content: center;
         height: 100%; /* Full height */
         overflow: auto; /* Scrollable */
         background-color: rgba(0, 0, 0, 0.8); /* Background color */
@@ -398,16 +398,14 @@
     }
 
     .form-container {
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
-        padding: 2.5rem;
-        border-radius: 20px;
-        width: 100%;
-        max-width: 480px;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        position: relative;
-        overflow: hidden;
+        background-color:#111827; /* White background */
+        padding: 20px; /* Padding */
+        border: 1px solid #262728; /* Border */
+        width: 100%; /* Width */
+        border-radius: 10px; /* Rounded corners */
+        color: #fafbfc; /* Text color */
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Box shadow */
+        align-content: center;
     }
 
     .form-container::before {
@@ -431,6 +429,8 @@
     .form-group {
         margin-bottom: 1.5rem;
         position: relative;
+        align-content: center;
+        
     }
 
     .form-input {
